<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Título -->
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp" />

        <!-- Usuario -->
        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:background="@android:drawable/editbox_background_normal"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@android:drawable/editbox_background_normal"
            android:padding="12dp"
            android:layout_marginBottom="24dp" />

        <!-- Iniciar sesión -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_login"
            android:textColor="@color/white"
            android:elevation="4dp"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp" />


        <!-- Registrarse -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/button_register"
            android:textColor="@android:color/white"
            android:elevation="4dp"
            android:minHeight="48dp" />
    </LinearLayout>
</ScrollView>
