<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio">

    <!-- Texto principal -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:text="@string/intro_title"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:text="@string/intro_description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        />

    <!-- Botón Iniciar Sesión -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/rounded_border_button"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Botón Registrarse -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_above="@id/buttonLogin"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_white_button"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>

